<resources>
    <string name="app_name">MireaProject1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="image_create">Image create</string>
    <string name="settings_menu">Settings</string>
    <string name="brouser">Brouser</string>
    <string name="calculator">Calculator</string>
    <string name="menu_music">Music</string>
    <string name="audio_record">Audio record</string>
    <string name="sensor_reading">Sensor reading</string>
    <string name="brouser_back"><![CDATA[<]]></string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>