<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings_menu" />
        <item
            android:id="@+id/nav_createImage"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/image_create" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_brouser"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/brouser" />
        <item
            android:id="@+id/nav_music"
            android:icon="@android:drawable/ic_lock_silent_mode_off"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_audio_record"
            android:icon="@android:drawable/presence_audio_online"
            android:title="@string/audio_record" />
        <item
            android:id="@+id/nav_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="save history" />
        <item
            android:id="@+id/nav_sensor_status"
            android:icon="@android:drawable/sym_action_chat"
            android:title="@string/sensor_reading" />

    </group>
</menu>